update prototype page

--- a/prototype.html
+++ b/prototype.html
@@ -226,7 +226,7 @@
         <article class="interactive-prototype-text col-two-thirds">
           <h1>Experimenting with Interactive prototyping tools</h1>
           <h2>“Keeping up with trends in technology improves product design and how we prototype them”</h2>
-          <p>To create high-fidelity interactive prototypes, I experimented with different prototyping tools such as <span>UXpin, Atomic, Pixate, and Framer.</span> Framer uses javascript which makes it more versatile and powerful but takes longer to prototype.</p>
+          <p>To create high-fidelity interactive prototypes, I experimented with different prototyping tools such as <span>Invision, Pixate, and Framer.</span> Framer uses javascript which makes it more versatile and powerful but takes longer to prototype.</p>
         </article>
         <aside class="interactive-prototype-iphone">
           <img src="./img/loading-iphone-large.png" alt="Framer mockup iphone">
