--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -126,7 +126,7 @@
        <div class="wrapper-container flex is-column justify-center">
           <div class="about">
             <h1 class="fadetext-about">A few things about myself</h1>
-            <h2 class="fadetext-about">I'm a designer and <br>front-end developer based in New Zealand.</h2>
+            <h2 class="fadetext-about">I'm a designer and front-end developer based in New Zealand.</h2>
             <p class="fadetext-about">I use design and technology to create things that are meaningful and creative. I’m interested in design and UI/UX, web technologies and mobile apps, photography and films. I understand that the best results come from collaboration and experimentation.</p>
           </div>
         </div>
