add more content to graphic design section

--- a/graphic-design.html
+++ b/graphic-design.html
@@ -98,6 +98,23 @@
 
   <section class="design-portfolio-items flex">
     <div class="flex-container align-center justify-center is-column">
+
+      <article class="portfolio-wrap">
+        <div class="col-1"><img src="img/graphic-design/portfolio-motel.jpg" alt="screen motel association"></div>
+        <p class="caption">(Motel Association of New Zealand / User interface design)</p>
+      </article>
+
+      <article class="portfolio-wrap">
+        <div class="col-1"><img src="img/graphic-design/portfolio-outsource.jpg" alt="Phoenix Brochure"></div>
+        <p class="caption">(Outsource Accounts / branding)</p>
+      </article>
+
+      <article class="portfolio-wrap">
+        <div class="col-2"><img src="img/graphic-design/portfolio-homehealth.jpg" alt="Home Health branding"></div>
+        <div class="col-2"><img src="img/graphic-design/portfolio-homehealth01.jpg" alt="Home Health user interface"></div>
+        <p class="caption" >(HCHA / User interface design, digital, branding, print)</p>
+      </article>
+
       <article class="portfolio-wrap">
         <div class="col-2"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
         <div class="col-2"><img src="img/graphic-design/portfolio-nztb02.png" alt="graphic design annual report"></div>
@@ -113,12 +130,7 @@
 
       <article class="portfolio-wrap">
         <div class="col-1"><img src="img/graphic-design/portfolio-promocard.png" alt="Phoenix Brochure"></div>
-        <p class="caption">(Capturegram promotion card, design and photography)</p>
-      </article>
-
-      <article class="portfolio-wrap">
-        <div class="col-1"><img src="img/graphic-design/portfolio-outsource.jpg" alt="Phoenix Brochure"></div>
-        <p class="caption">(Outsource Accounts, branding)</p>
+        <p class="caption">(Capturegram / Promotion card, design and photography)</p>
       </article>
 
       <article class="portfolio-wrap">
