--- a/user-interface.html
+++ b/user-interface.html
@@ -89,7 +89,7 @@
         <h1>Tandem</h1>
         <h2>Group project, user interface design and front end development</h2>
         <p class="ui-body-text">
-        Tandem is a ridesharing app that allows drivers and passengers willing to travel together to connect and share the costs of the journey.
+        Tandem is a ridesharing app that allows drivers and passengers willing to travel together to connect and share the costs of the journey. (I have more examples of UI design in the <a href="graphic-design.html">graphic design section</a>)
         </p>
       </article>  
       <div class="welcome-iphone">
