--- a/chatbot.html
+++ b/chatbot.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html id="bobo">
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
@@ -123,7 +123,7 @@
     </section> <!-- .scope -->
 
 
-    <footer class="footer flex-container justify-center">
+    <footer class="footer chatbot-footer flex-container justify-center">
       <div class="main-footer flex is-column">
         <div class="details">
           <figure>
