refactor chatbot.html

--- a/chatbot.html
+++ b/chatbot.html
@@ -80,16 +80,8 @@
       </div>
     </section> <!-- bluey intro -->
 
-    <section class="bluey-technology flex">
-      <div class="bluey-technology-container flex-container justify-center is-column">
-        <article>
-          <h1>Technology</h1>
-          <p>bluey used many different technologies. We used Express to run a server and Knex to assist with our SQL calls to our PostgreSQL database. We used handlebars for html templating, SASS for css, Jquery for DOM manipulation and nightwatch, selenium and OAuth for unit testing and authorisation. We deployed the final app to Heroku.</p>
-        </article>
-      </div>
-    </section>
 
-    <section class="bluey-process flex">
+    <!-- <section class="bluey-process flex">
       <div class="bluey-process-container flex-container justify-center is-column">
         <article>
           <h1>Our approach and process</h1>
@@ -102,9 +94,9 @@
         </div>
         <h6>(Wireframes done with indesign)</h6>
       </div>
-    </section>
+    </section> -->
 
-    <section class="bluey-final-design flex align-center">
+    <!-- <section class="bluey-final-design flex align-center">
       <div class="final-design-container flex-container is-column">
         <article class="final-text">
           <h1>Welcome to bluey</h1>
@@ -120,7 +112,7 @@
           </div>
         </article>
       </div>
-    </section> <!-- .scope -->
+    </section>  -->
 
 
     <footer class="footer chatbot-footer flex-container justify-center">
@@ -144,7 +136,7 @@
         </div>
         <div>
           <a class='backtop-btn'><img src="img/arrow-circle.svg"></i></a>
-          <p class="copy-right">&copy; Copyright 2016 Rayfinn Digital.</p>
+          <p class="copy-right">&copy; Copyright 2017 Rayfinn Digital.</p>
         </div>
       </div>
     </footer>
