add arrow above pulsing button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -40,9 +40,10 @@
 
     <div class="navbar-toggle">
       <div class="hamburger-container">
-        <div class="menu-bar top"></div>
+        <!-- <div class="menu-bar top"></div>
         <div class="menu-bar middle"></div>
-        <div class="menu-bar bottom"></div>
+        <div class="menu-bar bottom"></div> -->
+        <p>portfolio</p>
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
@@ -68,7 +69,7 @@
 
       <div class="nav-about-text">
         <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-        <p>My interests include interaction design, UX/UI, prototyping and front-end development.</p> 
+        <p>My interests include UI/UX design, technology, the internet and chatbots.</p>
       </div>
 
       <div class="nav-back-button">
@@ -100,14 +101,17 @@
       <div class="container center-content">
         <div class="landing-header">
           <h1>Excited to build whatever comes next!</h1>
-          <h3>Designer — Developer.</h3>
+          <h3>Digital Designer — Developer.</h3>
         </div>
         <div id="salmon-fish">
-          <img src="img/salmon-split.png">
-        </div>       
+          <a href="#about-me"><img src="img/salmon-split.png"></a>
+        </div>
       </div>
 
       <div class="pulse">
+        <div class="down-arrow">
+          <img src="img/down-arrow.svg" alt="arrow pointing down">
+        </div>
         <a href="#about-me">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
@@ -125,25 +129,28 @@
        <div class="wrapper-container flex is-column justify-center">
           <div class="about">
             <h1 class="fadetext-about">A few things about myself</h1>
-            <h2 class="fadetext-about">I'm a designer and front-end developer based in New Zealand.</h2>
-            <p class="fadetext-about">I use design and technology to create things that are meaningful and creative. I’m interested in design and UI/UX, web technologies and mobile apps, photography and films. I understand that the best results come from collaboration and experimentation.</p>
-          </div>
+            <h2 class="fadetext-about">I'm a digital designer and front-end developer based in <br> New Zealand.</h2>
+            <p class="fadetext-about">I love to use design and technology to create things that are meaningful and creative. I have a passion and interest for UI/UX design, technology, the internet, chatbots, photography and film. I understand that the best results come from collaboration and experimentation.</p>
         </div>
+      </div>
 
         <div class="pulse">
-        <a href="#prototype">
-          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
-            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
-            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
-            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
-            <circle cx="22" cy="22" r="8"></circle>
-            </g>
-          </svg>
-        </a>
+          <div class="down-arrow">
+            <img src="img/down-arrow.svg" alt="arrow pointing down">
+          </div>
+          <a href="#prototype">
+            <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
+              <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
+              <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+              <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+              <circle cx="22" cy="22" r="8"></circle>
+              </g>
+            </svg>
+          </a>
       </div>
 
       </div>
-    </div> <!-- .section .about-me  -->  
+    </div> <!-- .section .about-me  -->
 
     <div class="section prototype">
       <div class="p-background-icon">
@@ -163,6 +170,9 @@
         </div>
       </div>
       <div class="pulse">
+        <div class="down-arrow">
+          <img src="img/down-arrow-reverse.svg" alt="arrow pointing down">
+        </div>
         <a href="#user-interface">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
@@ -192,6 +202,9 @@
         </div>
       </div>
       <div class="pulse">
+        <div class="down-arrow">
+          <img src="img/down-arrow-reverse.svg" alt="arrow pointing down">
+        </div>
         <a href="#design">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
@@ -201,8 +214,8 @@
             </g>
           </svg>
         </a>
-      </div> 
-    </div> <!-- .section interaction --> 
+      </div>
+    </div> <!-- .section interaction -->
 
     <div class="section graphic-design">
       <div class="design-background-icon">
@@ -216,8 +229,8 @@
             <a href="graphic-design.html"><button class="main-btn-reverse fadetext-design">View Portfolio<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
-      </div> 
-    </div> <!-- .section interaction -->   
+      </div>
+    </div> <!-- .section interaction -->
 
   </main> <!-- end of main section -->
 
