change hamburger menu to portfolio

--- a/index.html
+++ b/index.html
@@ -39,13 +39,8 @@
     </figure>
 
     <div class="navbar-toggle">
-      <div class="hamburger-container">
-        <!-- <div class="menu-bar top"></div>
-        <div class="menu-bar middle"></div>
-        <div class="menu-bar bottom"></div> -->
-        <p>portfolio</p>
-      </div>
-    </div> <!-- .navbar-toggle / hamburger menu -->
+        <p class='portfolio-menu'>portfolio</p>
+    </div> <!-- .navbar-toggle  -->
 
   <nav class="fp-nav-wrapper flex">
     <div class="menu-container flex-container is-column">
