working on chatbot.html grid

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -39,15 +39,19 @@
     </figure>
 
     <div class="navbar-toggle">
-        <p class='portfolio-menu'>portfolio</p>
-    </div> <!-- .navbar-toggle  -->
+      <div class="hamburger-container">
+        <div class="menu-bar top"></div>
+        <div class="menu-bar middle"></div>
+        <div class="menu-bar bottom"></div>
+      </div>
+    </div> <!-- .navbar-toggle / hamburger menu -->
 
   <nav class="fp-nav-wrapper flex">
     <div class="menu-container flex-container is-column">
       <div class="nav-menu-content">
         <ul class="menu-list-items">
-          <li data-menuanchor="home" class="active menu-item"><a href="#home">home</a></li>
-          <li data-menuanchor="about-me" class="menu-item"><a href="#about-me">about</a></li>
+          <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
+          <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
           <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
           <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
           <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
@@ -64,7 +68,7 @@
 
       <div class="nav-about-text">
         <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-        <p>My interests include UI/UX design, technology, the internet and chatbots.</p>
+        <p>My interests include interaction design, UX/UI, prototyping and front-end development.</p>
       </div>
 
       <div class="nav-back-button">
@@ -96,7 +100,7 @@
       <div class="container center-content">
         <div class="landing-header">
           <h1>Excited to build whatever comes next!</h1>
-          <h3>Digital Designer — Developer.</h3>
+          <h3>Digital designer — Developer.</h3>
         </div>
         <div id="salmon-fish">
           <a href="#about-me"><img src="img/salmon-split.png"></a>
@@ -104,9 +108,6 @@
       </div>
 
       <div class="pulse">
-        <div class="down-arrow">
-          <img src="img/down-arrow.svg" alt="arrow pointing down">
-        </div>
         <a href="#about-me">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
@@ -124,24 +125,21 @@
        <div class="wrapper-container flex is-column justify-center">
           <div class="about">
             <h1 class="fadetext-about">A few things about myself</h1>
-            <h2 class="fadetext-about">I'm a digital designer and front-end developer based in <br> New Zealand.</h2>
+            <h2 class="fadetext-about">I'm a designer and front-end developer based in New Zealand.</h2>
             <p class="fadetext-about">I love to use design and technology to create things that are meaningful and creative. I have a passion and interest for UI/UX design, technology, the internet, chatbots, photography and film. I understand that the best results come from collaboration and experimentation.</p>
+          </div>
         </div>
-      </div>
 
         <div class="pulse">
-          <div class="down-arrow">
-            <img src="img/down-arrow.svg" alt="arrow pointing down">
-          </div>
-          <a href="#prototype">
-            <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
-              <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
-              <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
-              <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
-              <circle cx="22" cy="22" r="8"></circle>
-              </g>
-            </svg>
-          </a>
+        <a href="#prototype">
+          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="8"></circle>
+            </g>
+          </svg>
+        </a>
       </div>
 
       </div>
@@ -165,9 +163,6 @@
         </div>
       </div>
       <div class="pulse">
-        <div class="down-arrow">
-          <img src="img/down-arrow-reverse.svg" alt="arrow pointing down">
-        </div>
         <a href="#user-interface">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
@@ -197,9 +192,6 @@
         </div>
       </div>
       <div class="pulse">
-        <div class="down-arrow">
-          <img src="img/down-arrow-reverse.svg" alt="arrow pointing down">
-        </div>
         <a href="#design">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
@@ -220,7 +212,7 @@
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
             <h1 class="fadetext-design">Graphic Design</h1>
-            <p class="fadetext-design">Graphic designer and photographer with 6+ years of experience developing, designing and producing a variety of print and digital collateral including marketing material, branding, annual reports, user interface, E-newsletters, and posters.</p>
+            <p class="fadetext-design">Graphic designer and photographer with 7+ years of experience developing, designing and producing a variety of print and digital collateral including marketing material, branding, annual reports, user interface, E-newsletters, and posters.</p>
             <a href="graphic-design.html"><button class="main-btn-reverse fadetext-design">View Portfolio<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
         </div>
@@ -244,7 +236,6 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-88091283-1', 'auto');
     ga('send', 'pageview');
   </script>
