--- a/graphic-design.html
+++ b/graphic-design.html
@@ -35,7 +35,6 @@
       <figure class="logo red-logo active-logo">
         <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="Rayfinn logo"></a>
       </figure>
-
       <div class="navbar-toggle">
         <div class="hamburger-container">
           <div class="menu-bar"></div>
@@ -53,7 +52,7 @@
             <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
-            <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
+            <li data-menuanchor="design" class="menu-item"><a href="graphic-design.html">design</a></li>
           </ul>
 
           <div class="social-main-nav menu-item">
@@ -78,88 +77,110 @@
     </nav> <!-- .fp-nav-wrapper -->
   </div> <!-- .main-header -->
 
-  <main class="design-main-wrapper align-center justify-center">
+  <main class="ui-main-wrapper align-center justify-center">
 
-  <section class="design-intro-wrapper top-of-page flex align-center justify-center">
-    <div class="design-watermark">
-      <img src="img/graphic-design.svg" alt="background watermark">
+  <section class="ui-intro-wrapper top-of-page flex align-center justify-center">
+    <div class="ui-watermark">
+      <img src="img/user-interface-text-logo.svg" alt="background watermark">
     </div>
-    <div class="design flex-container is-column-reverse space-between">
+    <div class="ui-case-study flex-container is-column-reverse space-between">
       <article class="intro-text flex is-column justify-center">
-        <h1>Graphic Design</h1>
-        <h2>Welcome to my graphic design portfolio</h2>
-        <p class="design-body-text">
-        I am passionate about all things design. I love combining typography, photography, and colors to communicate ideas and stimulate feelings. I also have an interest in portrait and commercial photography. Online photographic portfolio <a target="_blank" href="http://www.capturegram.co.nz">capturegram</a>
+        <h1>Tandem</h1>
+        <h2>Group project, user interface design and front end development</h2>
+        <p class="ui-body-text">
+        Tandem is a ridesharing app that allows drivers and passengers willing to travel together to connect and share the costs of the journey. (I have more examples of UI design in the <a href="graphic-design.html">graphic design section</a>)
         </p>
       </article>
+      <div class="welcome-iphone">
+       <img src="img/tandem-iphone.png" alt="welcome page of Bird Nerd app">
+      </div>
     </div>
   </section> <!-- .prototype-intro-wrapper -->
 
-  <section class="design-portfolio-items flex">
-    <div class="flex-container align-center justify-center is-column">
+  <section class="tandem-intro flex">
+      <div class="tandem-intro-container flex-container align-center justify-center is-column">
+        <article class="intro-text">
+          <h1>Introduction</h1>
+          <p class="intro-para">For our final week at Enspiral Dev Academy, each student was required to pitch an idea for final group projects, each team had six days to complete the project.</p>
 
-      <article class="portfolio-wrap">
-        <div class="col-1"><img src="img/graphic-design/portfolio-motel.jpg" alt="screen motel association"></div>
-        <p class="caption">(Motel Association of New Zealand / User interface design)</p>
-      </article>
+          <p>Our team consisted of 6 members and the chosen idea was Tandem — a ridesharing app that connects drivers and passengers willing to travel together and share the costs. Tandem was initially aimed at drivers traveling long distances looking to fill empty seats to reduce travel costs, but we later included adventurous travelers looking to save money.</p>
 
-      <article class="portfolio-wrap">
-        <div class="col-1"><img src="img/graphic-design/portfolio-outsource.jpg" alt="Phoenix Brochure"></div>
-        <p class="caption">(Outsource Accounts / branding)</p>
-      </article>
-
-      <article class="portfolio-wrap">
-        <div class="col-2"><img src="img/graphic-design/portfolio-nztb01.png" alt="graphic design annual report"></div>
-        <div class="col-2"><img src="img/graphic-design/portfolio-nztb02.png" alt="graphic design annual report"></div>
-        <p class="caption" >(Annaul Report / design and layout)</p>
-      </article>
-
-      <article class="portfolio-wrap">
-        <div class="col-1"><img src="img/graphic-design/portfolio-nix00.jpg" alt="Phoenix poster"></div>
-        <div class="col-1"><img src="img/graphic-design/portfolio-nix01.png" alt="Phoenix Brochure"></div>
-        <div class="col-1"><img src="img/graphic-design/portfolio-nix02.png" alt="Phoenix Brochure"></div>
-        <p class="caption">(Wellington Phoenix / photography, retouching, design, branding and marketing material)</p>
-      </article>
-
-      <article class="portfolio-wrap">
-        <div class="col-1"><img src="img/graphic-design/portfolio-promocard.png" alt="Phoenix Brochure"></div>
-        <p class="caption">(Capturegram / Promotion card, design and photography)</p>
-      </article>
-
-      <article class="portfolio-wrap">
-        <div class="col-2"><img src="img/graphic-design/portfolio-logo01.png" alt="branding/logo"></div>
-        <div class="col-2"><img src="img/graphic-design/portfolio-logo02.png" alt="branding/logo"></div>
-        <p class="caption">(Branding/logo concepts)</p>
-      </article>
-    </div>
-  </section> <!-- tandem intro -->
-
-
-  <footer class="footer flex-container justify-center">
-    <div class="main-footer flex is-column">
-      <div class="details">
-        <figure>
-        <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn logo"></a>
-        </figure>
-        <p>Get in touch</p>
-        <p>Rath Prak</p>
-        <p>+64 (0)21 126 0568</p>
-        <p>digital designer | front end developer</p>
-        <p>Wellington, New Zealand</p>
+          <p>As a team, we were all involved with product development and planning. <span>My additional role was to design and implement the user interface of the app as well as front end development.</span></p>
+        </article>
       </div>
-      <div class="social-icons">
-        <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+    </section> <!-- tandem intro -->
+
+    <section class="tadem-technology flex">
+      <div class="tadem-technology-container flex-container justify-center is-column">
+        <article>
+          <h1>Technology</h1>
+          <p>Tandem used many different technologies. We used Express to run a server and Knex to assist with our SQL calls to our PostgreSQL database. We used handlebars for html templating, SASS for css, Jquery for DOM manipulation and nightwatch, selenium and OAuth for unit testing and authorisation. We deployed the final app to Heroku.</p>
+        </article>
       </div>
-      <div>
-        <a class='backtop-btn'><img src="img/arrow-circle.svg"></i></a>
-        <p class="copy-right">&copy; Copyright 2017 Rayfinn Digital.</p>
+    </section>
+
+    <section class="tadem-process flex">
+      <div class="tadem-process-container flex-container justify-center is-column">
+        <article>
+          <h1>Our approach and process</h1>
+          <p>We started with planning, developed user stories and figured out what technologies were best. We then moved to building wireframes for the site. <span>Creating wireframes, user stories, and sitemaps from the start were important</span> because it ensured that every team member was on the same page which made delegating roles and tasks straightforward.
+          </p>
+          <p>We used InDesign to produce the wireframes and site maps which were bases for my UI design. Since we had less than a week to complete the app, we skipped the prototype stage and decided to move straight into development.</p>
+        </article>
+
+        <div class="tandem-sitemap">
+          <img src="img/tandem-sitemap.png" alt="Image of Tandem wireframe">
+        </div>
+        <h6>(Wireframes done with indesign)</h6>
       </div>
-    </div>
-  </footer>
+    </section>
+
+    <section class="tandem-final-design flex align-center">
+      <div class="final-design-container flex-container is-column">
+        <article class="final-text">
+          <h1>Welcome to Tandem</h1>
+          <p>At midnight on the final day, there was a 'code freeze', which meant no more coding or improvements to the app. <span>After 6 days of intense development and design, we had achieved our MVP</span> and felt we had an app that we could proudly present.</p>
+          <p>There were still many areas that still needed work such as adding additional features and refactoring code. I would have liked to have done more iterations and improvements on the UI design, the app was not yet fully responsive and the CSS needed cleaning up. Everyone in the team had an amazing experience.</p>
+        </article>
+        <article>
+          <div class="tandem-screen-img">
+            <img src="img/tandem-landing.png" alt="screen shot of tandem landing page">
+            <h6>(Tandem landing page)</h6>
+          </div>
+          <div class="tandem-screen-img">
+            <img src="img/tandem-sign-in.png" alt="screen shot of tandem landing page">
+            <h6>(Tandem sign-in page)</h6>
+          </div>
+        </article>
+      </div>
+    </section> <!-- .scope -->
+
+
+    <footer class="footer flex-container justify-center">
+      <div class="main-footer flex is-column">
+        <div class="details">
+          <figure>
+          <a href="./#home"><img src="img/rayfinn-logo-red.svg" alt="rayfinn logo"></a>
+          </figure>
+          <p>Get in touch</p>
+          <p>Rath Prak</p>
+          <p>+64 (0)21 126 0568</p>
+          <p>digital designer | front end developer</p>
+          <p>Wellington, New Zealand</p>
+        </div>
+        <div class="social-icons">
+          <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://twitter.com/rathpnz"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          <a target="_blank" class="contact-item" href="https://www.instagram.com/rp20nz"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
+        <div>
+          <a class='backtop-btn'><img src="img/arrow-circle.svg"></i></a>
+          <p class="copy-right">&copy; Copyright 2017 Rayfinn Digital.</p>
+        </div>
+      </div>
+    </footer>
 
   </main> <!-- end of main-wrapper -->
 
@@ -169,15 +190,14 @@
   <script src="js/dist/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-88091283-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-88091283-1', 'auto');
+  ga('send', 'pageview');
+</script>
 
 </body>
 </html>
