--- a/prototype.html
+++ b/prototype.html
@@ -50,10 +50,10 @@
         <div class="nav-menu-content">
           <ul class="menu-list-items">
             <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
-            <li data-menuanchor="about-me" class="menu-item"><a href="./#about-me">about</a></li>
+            <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
-            <li data-menuanchor="design" class="menu-item"><a href="graphic-design.html">design</a></li>
+            <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
           </ul>
 
           <div class="social-main-nav menu-item">
