continue working on chatbot.html

--- a/chatbot.html
+++ b/chatbot.html
@@ -53,19 +53,21 @@
         <img src="img/chatbot/bluey-fullbody.png" alt="">
       </div>
       <div class="chatbot-case-study space-between">
-        <article class="intro-text flex is-column justify-center">
+        <article class="intro-text flex is-column justify-center align-center">
           <h2>Filling out surverys and online feedback forms can be tedious and boring.</h2>
           <h1>Say hello to Bluey!</h1>
           <h4 class="chatbot-body-text">
           The Messenger bot that facilitates surveys and feedback forms in a fun and easy way.
-        </h4>
+          </h4>
+          <div class="messenger-button">
+            <h4>#ADD TO MESSENGER</h4>
+          </div>
         </article>
       </div>
     </section> <!-- .chatbot-intro-wrapper -->
 
   <section class="bluey-intro flex">
       <div class="bluey-intro-container flex-container align-center justify-center is-column">
-
         <div class="bluey-chatbot-diagram">
           <img src="img/chatbot/chatbot-diagram.png" alt="">
         </div>
@@ -76,6 +78,9 @@
           The Messenger bot that facilitates surveys and feedback forms in a fun and easy way.
           </h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+          <div class="messenger-button">
+            <h4>#ADD TO MESSENGER</h4>
+          </div>
         </article>
 
       </div>
