finish chatbot.html

--- a/chatbot.html
+++ b/chatbot.html
@@ -48,43 +48,55 @@
   </div> <!-- .chatbot-header -->
 
   <main class="chatbot-main-wrapper">
-    <section class="chatbot-intro-wrapper top-of-page is-column">
+    <section class="chatbot-intro-wrapper flex justify-center align-center top-of-page is-column">
       <div class="bluey-main-image">
-        <img src="img/chatbot/bluey-fullbody.png" alt="">
+        <img src="img/chatbot/bluey_circle.svg" alt="profile shot of bluey">
       </div>
-      <div class="chatbot-case-study space-between">
         <article class="intro-text flex is-column justify-center align-center">
           <h2>Filling out surverys and online feedback forms can be tedious and boring.</h2>
           <h1>Say hello to Bluey!</h1>
           <h4 class="chatbot-body-text">
-          The Messenger bot that facilitates surveys and feedback forms in a fun and easy way.
+          The Messenger bot that facilitates surveys in a fun and easy way.
           </h4>
-          <div class="messenger-button">
+          <!-- <div class="messenger-button">
             <h4>#ADD TO MESSENGER</h4>
-          </div>
+          </div> -->
         </article>
-      </div>
     </section> <!-- .chatbot-intro-wrapper -->
 
-  <section class="bluey-intro flex">
-      <div class="bluey-intro-container flex-container align-center justify-center is-column">
-        <div class="bluey-chatbot-diagram">
-          <img src="img/chatbot/chatbot-diagram.png" alt="">
+  <section class="climate-change-intro flex">
+      <div class="climate-change-container flex-container is-column">
+        <div class="side-graphic">
+          <img src="img/chatbot/climate_change_globe.svg" alt="melting globe">
         </div>
 
         <article class="intro-text flex is-column justify-center">
           <h1>Climate change</h1>
-          <h4 class="chatbot-body-text">
-          The Messenger bot that facilitates surveys and feedback forms in a fun and easy way.
-          </h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
-          <div class="messenger-button">
+          <p>Climate change is perhaps on of the most important issues concerning young people today, but research has found that more than one third of the world's adults have never heard of climate change. In some regions, this rises to more than two-thirds of the adult population.</p>
+          <!-- <div class="messenger-button">
             <h4>#ADD TO MESSENGER</h4>
-          </div>
+          </div> -->
         </article>
 
       </div>
-    </section> <!-- bluey intro -->
+    </section> <!-- Climate-change-intro -->
+
+    <section class="final-chatbot flex">
+        <div class="final-chatbot-container flex-container is-column">
+          <div class="side-graphic">
+            <img src="img/chatbot/bluey-fullbody.svg" alt="melting globe">
+          </div>
+
+          <article class="intro-text flex is-column justify-center">
+            <h1>How much do you know?</h1>
+            <p>"To help educate people on the causes and effects of climate change, I'm conducting a short survey to find how much people actually know about the issue" </p>
+            <div class="messenger-button">
+              <a href="#"><h4>Take survey on messenger</h4></a>
+            </div>
+          </article>
+
+        </div>
+      </section> <!-- bluey intro -->
 
     <footer class="footer chatbot-footer flex-container justify-center">
       <div class="main-footer flex is-column">
