--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -51,10 +51,10 @@
       <div class="nav-menu-content">
         <ul class="menu-list-items">
           <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
-          <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
           <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
+          <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
           <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
-          <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
+          <li data-menuanchor="design" class="menu-item"><a href="graphic-design.html">design</a></li>
         </ul>
 
         <div class="social-main-nav menu-item">
@@ -158,6 +158,36 @@
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
+            <img id="proto-test" src="img/prototype-test.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="pulse">
+        <a href="#chatbot">
+          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="8"></circle>
+            </g>
+          </svg>
+        </a>
+      </div>
+    </div> <!-- .section user-interface -->
+
+    <div class="section chatbot">
+      <div class="c-background-icon">
+        <img src="img/chatbot_icon.svg" alt="prototype and design initial">
+      </div>
+      <div class="chatbot-container flex justify-center">
+        <div class="wrapper-container flex justify-center align-center space-between">
+          <article>
+            <h1 class="fadetext-chatbot">chatbot</h1>
+            <p class="fadetext-chatbot">This case study is based on a project I worked on in 2014 and reworked 2016 as a personal project and prototyping exercise.</p>
+            <!-- <a href="prototype.html" class="btn-2">View Case Study</a> -->
+            <a href="prototype.html"><button class="main-btn-reverse fadetext-chatbot">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
+          </article>
+          <div class="prototype-mockup fadetext-chatbot">
             <img id="proto-test" src="img/prototype-test.png" alt="">
           </div>
         </div>
