add chatbot desktop graphic

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <a href="prototype.html"><button class="main-btn-reverse fadetext-chatbot">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-chatbot">
-            <img id="proto-test" src="img/prototype-test.png" alt="">
+            <img id="proto-test" src="img/chatbot-desktop-mockup.svg" alt="">
           </div>
         </div>
       </div>
