--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -68,7 +68,7 @@
 
       <div class="nav-about-text">
         <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-        <p>My interests include interaction design, UX/UI, prototyping and front-end development.</p>
+        <p>My interests include UI/UX design, technology, the internet and chatbots.</p>
       </div>
 
       <div class="nav-back-button">
@@ -152,7 +152,7 @@
       <div class="prototype-container flex justify-center">
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
-            <h1 class="fadetext-prototype">prototyping</h1>
+            <h1 class="fadetext-prototype">Prototyping</h1>
             <p class="fadetext-prototype">This case study is based on a project I worked on in 2014 and reworked 2016 as a personal project and prototyping exercise.</p>
             <!-- <a href="prototype.html" class="btn-2">View Case Study</a> -->
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
@@ -182,13 +182,12 @@
       <div class="chatbot-container flex justify-center">
         <div class="wrapper-container flex justify-center align-center space-between">
           <article>
-            <h1 class="fadetext-chatbot">chatbot</h1>
-            <p class="fadetext-chatbot">This case study is based on a project I worked on in 2014 and reworked 2016 as a personal project and prototyping exercise.</p>
-            <!-- <a href="prototype.html" class="btn-2">View Case Study</a> -->
-            <a href="prototype.html"><button class="main-btn-reverse fadetext-chatbot">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
+            <h1 class="fadetext-chatbot">Chatbot</h1>
+            <p class="fadetext-chatbot">A personal UX/UI project which explores conversational interface and chatbots for research and feedback.</p>
+            <a href="chatbot.html"><button class="main-btn-reverse chat-btn fadetext-chatbot">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
-          <div class="prototype-mockup fadetext-chatbot">
-            <img id="proto-test" src="img/chatbot-desktop-mockup.svg" alt="">
+          <div class="chatbot-mockup fadetext-chatbot">
+            <img src="img/chatbot-desktop-mockup.svg" alt="">
           </div>
         </div>
       </div>
