--- a/prototype.html
+++ b/prototype.html
@@ -50,8 +50,8 @@
         <div class="nav-menu-content">
           <ul class="menu-list-items">
             <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
-            <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
             <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
+            <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
             <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
           </ul>
@@ -67,7 +67,7 @@
 
         <div class="nav-about-text">
           <h2>I'm a <span>Digital designer</span> and <span>Front-end developer</span> based in Wellington.</h2>
-          <p>My interests include interaction design, UX/UI, prototyping and front-end development.</p>
+          <p>My interests include UI/UX design, technology, the internet and chatbots.</p>
         </div>
 
         <div class="nav-back-button">
