--- a/chatbot.html
+++ b/chatbot.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.min.css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -38,8 +38,8 @@
       </figure>
       <ul class="chatbot-list-items">
         <li data-menuanchor="home"><a href="./#home">home</a></li>
-        <li data-menuanchor="chatbot"><a href="chatbot.html">chatbots</a></li>
         <li data-menuanchor="prototype"><a href="prototype.html">prototyping</a></li>
+        <li data-menuanchor="chatbot"><a href="chatbot.html">chatbots</a></li>
         <li data-menuanchor="user-interface"><a href="user-interface.html">user interface</a></li>
         <li data-menuanchor="design"><a href="graphic-design.html">design</a></li>
       </ul>
@@ -58,9 +58,6 @@
           <h4 class="chatbot-body-text">
           The Messenger bot that facilitates surveys in a fun and easy way.
           </h4>
-          <!-- <div class="messenger-button">
-            <h4>#ADD TO MESSENGER</h4>
-          </div> -->
         </article>
     </section> <!-- .chatbot-intro-wrapper -->
 
@@ -73,9 +70,6 @@
         <article class="intro-text flex is-column justify-center">
           <h1>Climate change</h1>
           <p>Climate change is perhaps on of the most important issues concerning young people today, but research has found that more than one third of the world's adults have never heard of climate change. In some regions, this rises to more than two-thirds of the adult population.</p>
-          <!-- <div class="messenger-button">
-            <h4>#ADD TO MESSENGER</h4>
-          </div> -->
         </article>
 
       </div>
