change from gulp to webpack

--- a/user-interface.html
+++ b/user-interface.html
@@ -187,7 +187,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
-  <script src="js/dist/main.js"></script>
+  <script src="js/dist/bundle.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
