--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <style>
 
         * {
@@ -13,7 +13,7 @@
         }
 
         html {
-            
+
             display: table;
             font-family: sans-serif;
             height: 100%;
