--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.0.0/pixi.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
-  <script src="js/dist/main.js"></script>
+  <script src="js/dist/bundle.js"></script>
 
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
