refactor design on home page adding arrow and case study que

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -51,7 +51,7 @@
       <div class="nav-menu-content">
         <ul class="menu-list-items">
           <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
-          <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
+          <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototyping</a></li>
           <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
           <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
           <li data-menuanchor="design" class="menu-item"><a href="graphic-design.html">design</a></li>
@@ -107,6 +107,10 @@
         </div>
       </div>
 
+      <div class="case-study-type">
+        <a href="#about-me"><span>case studies</span><a/>
+      </div>
+
       <div class="pulse">
         <a href="#about-me">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
@@ -117,6 +121,10 @@
             </g>
           </svg>
         </a>
+      </div>
+
+      <div class="down-arrow">
+        <img src="img/down-arrow.svg" alt="">
       </div>
 
     </div> <!-- .main-landing-page -->
