--- a/graphic-design.html
+++ b/graphic-design.html
@@ -50,7 +50,7 @@
         <div class="nav-menu-content">
           <ul class="menu-list-items">
             <li data-menuanchor="home" class="active menu-item"><a href="./#home">home</a></li>
-            <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototype</a></li>
+            <li data-menuanchor="prototype" class="menu-item"><a href="prototype.html">prototyping</a></li>
             <li data-menuanchor="chatbot" class="menu-item"><a href="chatbot.html">chatbot</a></li>
             <li data-menuanchor="user-interface" class="menu-item"><a href="user-interface.html">user interface</a></li>
             <li data-menuanchor="photography" class="menu-item"><a href="graphic-design.html">design</a></li>
