adjust background water darkness

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div>
 
       <div class="down-arrow">
-        <img src="img/down-arrow.svg" alt="">
+        <img src="img/down-arrow-reverse.svg" alt="">
       </div>
 
     </div> <!-- .main-landing-page -->
