refactor design home page

--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
     </figure>
 
     <div class="navbar-toggle">
-      <div class="hamburger-container">
-        <div class="menu-bar top"></div>
-        <div class="menu-bar middle"></div>
-        <div class="menu-bar bottom"></div>
-      </div>
+      <div class="my-work">My Work</div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
   <nav class="fp-nav-wrapper flex">
