add prototyping new graphic

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </figure>
 
     <div class="navbar-toggle">
-      <div class="my-work">My Work</div>
+      <div class="my-work ">My Work</div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
   <nav class="fp-nav-wrapper flex">
@@ -162,7 +162,7 @@
             <a href="prototype.html"><button class="main-btn-reverse fadetext-prototype">Case study<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button></a>
           </article>
           <div class="prototype-mockup fadetext-prototype">
-            <img id="proto-test" src="img/prototype-test.png" alt="">
+            <img id="proto-test" src="img/prototype-flat.svg" alt="">
           </div>
         </div>
       </div>
